Step8/Network_policy/backend_policy/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-backend-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 5001
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: database 
    ports:
    - protocol: TCP
      port: 5432
